# horizon-reduction

./: .gitignore  main.py  pyproject.toml  run-1.sh  run-2-cfgrl.sh  run-2.sh  run-8.sh  shortcut.py
agents/: __init__.py  cfgrl.py  hcfgrl.py
envs/: env_utils.py
targets/: targets_shortcut.py  time.py  time_emb.py
utils/: evaluation.py  flax_utils.py  networks.py
